:rocket: Finalizando aqui a parte de diretivas no aprendizado de Angular

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,22 @@
 
 <!-- <app-diretiva-ngclass></app-diretiva-ngclass> -->
 
-<app-diretiva-ngstyle></app-diretiva-ngstyle>
+<!-- <app-diretiva-ngstyle></app-diretiva-ngstyle> -->
+
+<!-- <app-operador-elvis></app-operador-elvis> -->
+
+<!-- <app-diretiva-ngcontent>
+  <div class="title">
+    Title do ngContent
+  </div>
+  <div class="content">
+    Aqui escrevemos o que o ngContent receberá, em forma de um replace do que está lá no componente.
+    Podemos passar também outro componente detro desse.
+    <app-diretiva-ngfor></app-diretiva-ngfor>
+  </div>
+  <div class="content">
+    Caso tenhamos 2 opções de seletores, podemos ver que ele mostra na ordem que foi disposta dentro do HTML.
+  </div>
+</app-diretiva-ngcontent> -->
+
+<app-diretivas-customizadas></app-diretivas-customizadas>
